# CTC

./: README.md
apps/fastr/: AlignedRead.cpp  AlignedRead.h  BamRegionData.cpp  BamRegionData.h  Consensus.cpp  Consensus.h  ConsensusHashTable.cpp  ConsensusHashTable.h  Fasta.cpp  Fasta.h  FastaHack.cpp  GenomeLoc.cpp  GenomeLoc.h  HelperFunctions.cpp  HelperFunctions.h  IndelRealigner.cpp  IndelRealigner.h  IndelRealigner_kernel.cl  LICENSE  LargeFileSupport.h  Makefile.am  README  ReadBin.cpp  ReadBin.h  SWPairwiseAlignment.cpp  SWPairwiseAlignment.h  SWPairwiseTest.cpp  SortedBamWriter.cpp  SortedBamWriter.h  Types.h  autorun.sh  configure.ac  disorder.cpp  disorder.h  oclHelper.cpp  oclHelper.h  split.cpp  split.h
apps/fastr/bamtools/: CMakeLists.txt
apps/fastr/bamtools/src/api/: BamReader.cpp  BamReader.h  BamWriter.cpp  BamWriter.h  CMakeLists.txt
apps/fastr/bamtools/src/api/internal/: BamReader_p.cpp  BamReader_p.h  BamWriter_p.cpp  BamWriter_p.h  BgzfStream_p.cpp  BgzfStream_p.h
apps/fastr/cuda/: FastOffset.cu  FastOffset.h  global.h  kernels.cu  swat_cuda.cu  swat_cuda.h
engine/: Makefile.am  README  autogen.sh  configure.ac
engine/cli/: cli.py
engine/examples/annotated_scripts/: script_example
engine/examples/c++/: Makefile.mk  Makefile.mk~  align_workflow.cpp
engine/include/: ctc_catalog.h  ctc_engine.h  ctc_logger.h  ctc_plugin.h  ctc_sysconfig.h  ctc_util.h  ctc_workflow.h
engine/include/rapidxml/: rapidxml_print.hpp
engine/src/: Makefile.mk  Makefile.old  clear_workspace.cpp  create_plugin_template.cpp  create_workflow.cpp  ctc_catalog.cpp  ctc_engine.cpp  ctc_logger.cpp  ctc_plugin.cpp  ctc_sysconfig.cpp  ctc_util.cpp  ctc_workflow.cpp  example.xml  execute_engine.cpp  import_script.cpp  query_engine.cpp  remove_plugin.cpp  remove_suite.cpp  remove_workflow.cpp  test.cpp  workflow_example.xml
engine/test/: .config.ini.swp  catalog.xml  config.ini  ctc.ini
engine/test/examples/: cli_commands
engine/test/plugins/bwa/: bwa_aln.xml  bwa_sampe.xml
engine/test/plugins/dindel/: dindel.py  dindel.xml
engine/test/plugins/fastr/: FastR.xml
engine/test/plugins/gatk/: gatk_genotyper.xml  gatk_realign.xml  realigner_target_creator.xml
engine/test/plugins/picard/: picard_dedupe.xml
engine/test/plugins/samtools/: index_bam.xml  mpileup.xml  sam_sorted_bam.xml  sam_to_bam.xml  sort_bam.xml
engine/test/workflows/: bwa_pe_sam.xml  dindel_recursive.xml  dindel_variant_calling.xml  gatk_variant_calling.xml  samtools_variant_calling.xml
